--- a/website/website pug/home.pug
+++ b/website/website pug/home.pug
@@ -93,10 +93,10 @@ html
             br
             br
             label(for='payment') Payment method:
-            select(id='payment', name='payment')
-              option(value='credit') Credit card
-              option(value='debit') Debit card
-              option(value='paypal') PayPal
+div
+  button#credit(name='payment', value='credit') Credit card
+  button#debit(name='payment', value='debit') Debit card
+  button#paypal(name='payment', value='paypal') PayPal
             br
             br
             input(type='submit', value='Place Order')
