--- a/website/website_pug/History.pug
+++ b/website/website_pug/History.pug
@@ -79,11 +79,11 @@ html
           input(type="text", id="address", name="address", required)
           br
           br
-          label(for='payment') Payment method:
-div
-  button#credit(name='payment', value='credit') Credit card
-  button#debit(name='payment', value='debit') Debit card
-  button#paypal(name='payment', value='paypal') PayPal
+          label(for="payment") Payment method:
+          select(id="payment", name="payment")
+            option(value="credit") Credit card
+            option(value="debit") Debit card
+            option(value="paypal") PayPal
           br
           br
           input(type="submit", value="Place Order")
