--- a/website/website_pug/home.pug
+++ b/website/website_pug/home.pug
@@ -103,7 +103,8 @@ html
             br
             input(type='submit', value='Place Order')
       section
-        // Add your contact information here
+        //code presents a web page that allows users to view items in their shopping cart and proceed to checkout by filling out a simple form that includes their name, email, address, and payment method.
+
         p 99 Roe Drive
         p Norwich, UK
         p Phone: 07829373217
