--- a/website/website_pug/login.pug
+++ b/website/website_pug/login.pug
@@ -22,3 +22,4 @@ html
           input(type="submit" value="Login")
     footer
       p &copy; 2023 Cafe POS System. All rights reserved.
+      //HTML code for a login page for a Cafe POS (Point of Sale) system. The code includes a header with the cafe's name, a login form with fields for username and password, and a submit button. The code also includes a footer with the copyright information for the POS system.
