--- a/website/website_pug/membership.pug
+++ b/website/website_pug/membership.pug
@@ -4,7 +4,8 @@ html
     title The Cafe
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    // Add any necessary stylesheets and scripts here
+   // This code sets up some essential features that are necessary for web development, such as setting the title and viewport meta tag.
+
   body
     header
       h1 The Cafe
