lots of changes
basically done just need to add admin 4 and normal user 4 and then were done. Also need some examples of testing and form validation.

--- a/views/login.pug
+++ b/views/login.pug
@@ -1,8 +1,7 @@
 extends layout
 
 block content 
-    h2 Welcome to #{title}
-    h3 Login 
+    h1 Please Login
     form(action="#" method="post")
         label(for="username")
         input#username(type="text" name="username" placeholder="Username" required="")
