--- a/views/adduser.pug
+++ b/views/adduser.pug
@@ -4,10 +4,10 @@ block content
      h1 Add A User
      form(action="/addUser" method="post")
           label(for="username")
-          input#username(type="text" name="username" placeholder="Username" required="")
+          input#username(type="text" name="username" placeholder="Username" required="" maxlength="30")
           br
           label(for="password")
-          input#password(type="password" name="password" placeholder="Password" required="")
+          input#password(type="password" name="password" placeholder="Password" required="" maxlength="30")
           br
           input#adminbool(type="radio" name="admin" value="1")
           label(for="adminbool") admin
