--- a/views/discounts.pug
+++ b/views/discounts.pug
@@ -9,7 +9,7 @@ block content
            input(type="submit" name="input" value="Change Two for one")
            input(type="hidden" name="name" value=product.name readonly)
         form(action="/changePercentOff" method="get")
-            input(type="text" name="percentOff" value="")
+            input(type="number" name="percentOff" step=".01" max="100")
             input(type="hidden" name="name" value=product.name readonly)
             input(type="submit" name="input" value="Change Percent Off")
 
